.manifests/service.yml
kind: Service
apiVersion: v1
metadata:
  name: my-vue-app-service
  namespace: my-vue-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-vue-app
