.manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-vue-app-ingress
  namespace: my-vue-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx-ingress-class
  tls:
    - secretName: my-vue-app-scibaric-dev-tls
      hosts:
        - my-vue-app.scibaric.dev
  rules:
    - host: my-vue-app.scibaric.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-vue-app-service
                port:
                  number: 80
